# popai

./: .gitignore  README.md
backend/: README.md  example.env  pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: README.md  next.config.ts
frontend/src/app/: layout.tsx  page.tsx
